--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Restaurant</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="styles.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
   <app-root></app-root>
